spell damage now changeable via datapack