@@ -1,5 +1,7 @@
 package io.github.flemmli97.runecraftory.api.datapack;
 
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import io.github.flemmli97.runecraftory.api.attachment.Skills;
@@ -7,7 +9,7 @@ import io.github.flemmli97.tenshilib.common.utils.CodecUtils;
 import net.minecraft.util.ExtraCodecs;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.EnumMap;
 import java.util.EnumSet;
 import java.util.List;
@@ -15,32 +17,32 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
-public class SpellProperties {
+public record SpellProperties(int cooldown, int rpCost, float percentageCost, float baseDamageMultiplier,
+                              Map<Skills, Float> skillXP, Set<Skills> skills) {
 
     public static final Codec<SpellProperties> CODEC = RecordCodecBuilder.create((instance) ->
-            instance.group(
-                    Codec.FLOAT.fieldOf("percentage").forGetter(d -> d.percentage),
-                    CodecUtils.stringEnumCodec(Skills.class, null).listOf().optionalFieldOf("skills").forGetter(d -> d.skills.isEmpty() ? Optional.empty() : Optional.of(List.copyOf(d.skills))),
+            instance.group(ExtraCodecs.NON_NEGATIVE_INT.fieldOf("cooldown").forGetter(SpellProperties::cooldown),
+                    Codec.INT.fieldOf("runepoints_cost").forGetter(SpellProperties::rpCost),
+                    Codec.FLOAT.fieldOf("percentage_cost").forGetter(SpellProperties::percentageCost),
+                    Codec.FLOAT.fieldOf("base_damage_multiplier").forGetter(SpellProperties::baseDamageMultiplier),
+                    Codec.unboundedMap(CodecUtils.stringEnumCodec(Skills.class, null), Codec.FLOAT).fieldOf("skill_xp").forGetter(SpellProperties::skillXP),
+                    CodecUtils.stringEnumCodec(Skills.class, null).listOf().optionalFieldOf("skills").forGetter(d -> d.skills().isEmpty() ? Optional.empty() : Optional.of(List.copyOf(d.skills())))
+            ).apply(instance, (cooldown, rpCost, percentage, baseDamageMultiplier, skillXp, skills) ->
+                    new SpellProperties(cooldown, rpCost, percentage, baseDamageMultiplier, skillXp, skills.orElse(List.of()))));
 
-                    ExtraCodecs.NON_NEGATIVE_INT.fieldOf("cooldown").forGetter(d -> d.cooldown),
-                    Codec.INT.fieldOf("rp_cost").forGetter(d -> d.rpCost),
-                    Codec.unboundedMap(CodecUtils.stringEnumCodec(Skills.class, null), Codec.FLOAT).fieldOf("skill_xp").forGetter(d -> d.skillXP)
-            ).apply(instance, (percentage, skills, cooldown, rpCost, skillXp) -> new SpellProperties(skillXp, cooldown, rpCost, percentage, skills.orElse(List.of()))));
-    public static final SpellProperties DEFAULT_PROP = new SpellProperties(new EnumMap<>(Skills.class), 20, 0, 0, List.of());
-    public final Map<Skills, Float> skillXP;
-    public final int cooldown, rpCost;
-    public final float percentage;
-    public final Set<Skills> skills;
+    public static final SpellProperties DEFAULT_PROP = new SpellProperties(20, 0, 0, 1, new EnumMap<>(Skills.class), Set.of());
 
-    public SpellProperties(Map<Skills, Float> skillXP, int cooldown, int rpCost, float percentage, List<Skills> skills) {
-        this.percentage = percentage;
-        EnumSet<Skills> reducingSkills = skills.isEmpty() ? EnumSet.noneOf(Skills.class) : EnumSet.copyOf(skills);
-        this.skills = Collections.unmodifiableSet(reducingSkills);
-        EnumMap<Skills, Float> xp = new EnumMap<>(Skills.class);
-        xp.putAll(skillXP);
-        this.skillXP = Collections.unmodifiableMap(xp);
+    public SpellProperties(int cooldown, int rpCost, float percentageCost, float baseDamageMultiplier, Map<Skills, Float> skillXP, Collection<Skills> skills) {
+        this(cooldown, rpCost, percentageCost, baseDamageMultiplier, skillXP, Set.copyOf(skills));
+    }
+
+    public SpellProperties(int cooldown, int rpCost, float percentageCost, float baseDamageMultiplier, Map<Skills, Float> skillXP, Set<Skills> skills) {
         this.cooldown = cooldown;
         this.rpCost = rpCost;
+        this.percentageCost = percentageCost;
+        this.baseDamageMultiplier = baseDamageMultiplier;
+        this.skillXP = skillXP.isEmpty() ? ImmutableMap.of() : ImmutableMap.copyOf(new EnumMap<>(skillXP));
+        this.skills = ImmutableSet.copyOf(skills.isEmpty() ? EnumSet.noneOf(Skills.class) : EnumSet.copyOf(skills));
     }
 
     /**
@@ -52,7 +54,7 @@ public class SpellProperties {
 
         private final int cooldown, rpCost;
         private final List<Skills> skills = new ArrayList<>();
-        private float percentage;
+        private float percentage, damageMultiplier = 1;
 
         public Builder(int cooldown, int rpCost) {
             this.cooldown = cooldown;
@@ -74,8 +76,13 @@ public class SpellProperties {
             return this;
         }
 
+        public SpellProperties.Builder damageMultiplier(float multiplier) {
+            this.damageMultiplier = multiplier;
+            return this;
+        }
+
         public SpellProperties build() {
-            return new SpellProperties(this.xp, this.cooldown, this.rpCost, this.percentage, this.skills);
+            return new SpellProperties(this.cooldown, this.rpCost, this.percentage, this.damageMultiplier, this.xp, this.skills);
         }
     }
 }
